--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
   
   <a class="active" href="#home">Home</a>
-  <a href="#page1">Page 1</a>
-  <a href="#page2">Page 2</a>
-  <a href="#page3">Page 3</a>
+  <a href="page1">Page 1</a>
+  <a href="page2">Page 2</a>
+  <a href="page3">Page 3</a>
 </div>
 
     
