--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   
   <a class="active" href="#home">Home</a>
-  <a href="Page1">Page 1</a>
+  <a href="page1.html">Page 1</a>
   <a href="page2">Page 2</a>
   <a href="page3">Page 3</a>
 </div>
