--- a/index.html
+++ b/index.html
@@ -1,48 +1,11 @@
 <html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0>
+</head>
 
-<body>
-  <h1>Ben</h1>
-  <p>Does this work!</p>
-  
-</body>
-
-<div class="topnav">
-<style>
-.topnav {
-  background-color: #333;
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-    
-  </style>
-
-  
-  <a class="active" href="#home">Home</a>
-  <a href="page1.html">Page 1</a>
-  <a href="page2">Page 2</a>
-  <a href="page3">Page 3</a>
-</div>
 
     
 </html>
