--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0>
 </head>
+<body>
+    <special-header></special-header>
+    <h1>About</h1>
+    <p>Main stuff<p>
 
 
     
+    <special-footer></special-footer>
+
+    <script src-"./headerFooterMng.js"></script>
+
+</body>    
 </html>
