--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <special-footer></special-footer>
 
-    <script src-"./headerFooterMng.js"></script>
+    <script src-"./headerfooterMng.js"></script>
 
 </body>    
 </html>
