--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <special-footer></special-footer>
 
-    <script src-"headerfooterMng.js"></script>
+    <script src="./headerfooterMng.js"></script>
 
 </body>    
 </html>
