--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
 <body>
     <special-header></special-header>
     <h1>About</h1>
-    <p>Main stuff<p>
+    <p>Main stuff</p>
 
 
     
