--- a/page1.html
+++ b/page1.html
@@ -1,11 +1,20 @@
 <html>
+
 <head>
-<title>Page Title</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <special-header></special-header>
+    <h1>Page 1</h1>
+    <p>Other stuff</p>
 
-<h1>Page 1 This is a Heading</h1>
-<p>This is a paragraph.</p>
 
-</body>
+    
+    <special-footer></special-footer>
+
+    <script src="./headerfooterMng.js"></script>
+
+</body>    
 </html>
