--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <special-header></special-header>
     <h1>About</h1>
     <p>Main stuff</p>
-
+     <p style = "display: flex">
+          <a href = "index.html">Home</a>
+          <a href = "page1.html">Page1</a>
+          
+        </p>
 
     
     <special-footer></special-footer>
