--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-   
-    <h1>About</h1>
+   <special-header></special-header>
+    <h1>Home</h1>
     <p>Main stuff</p>
-     <p style = "display: flex">
-          <a href = "index.html">Home</a>
-          <a href = "page1.html">Page1</a>
-          
-        </p>
-
     
+
+    <special-footer></special-footer>
  
 
 </body>    
