--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <a href = "index.html">Home</a>
+  <a href = "page1.html">Page1</a>
 </head>
 <body>
-   <special-header></special-header>
+  
     <h1>Home</h1>
     <p>Main stuff</p>
     
 
-    <special-footer></special-footer>
- 
-    <script src= "./headerfooterMng.js"></script>
+   
 </body>    
 </html>
