--- a/page1.html
+++ b/page1.html
@@ -4,17 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <a href = "index.html">Home</a>
+  <a href = "page1.html">Page1</a>
 </head>
 <body>
-    <special-header></special-header>
+  
     <h1>Page 1</h1>
-    <p>Other stuff</p>
-
-
+    <p>Other</p>
     
-    <special-footer></special-footer>
 
-    <script src="./headerfooterMng.js"></script>
-
+   
 </body>    
 </html>
