--- a/page1.html
+++ b/page1.html
@@ -12,10 +12,7 @@
   <a href = "page1.html">Page1</a>
 </head>
 
-
-  
 <body>
-  
     <h1>Page 1</h1>
     <p>Other</p>
 </body> 
@@ -41,11 +38,11 @@ var svg = d3.select("#my_dataviz")
           "translate(" + margin.left + "," + margin.top + ")");
 
 // get the data
-d3.csv("https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/1_OneNum.csv", function(data) {
+d3.csv("./vlaues", function(data) {
 
   // X axis: scale and draw:
   var x = d3.scaleLinear()
-      .domain([0, 1000])     // can use this instead of 1000 to have the max of data: d3.max(data, function(d) { return +d.price })
+      .domain([0, 1000])     // can use this instead of 1000 to have the max of data: d3.max(data, function(d) { return +d.value })
       .range([0, width]);
   svg.append("g")
       .attr("transform", "translate(0," + height + ")")
