--- a/page1.html
+++ b/page1.html
@@ -38,7 +38,7 @@ var svg = d3.select("#my_dataviz")
           "translate(" + margin.left + "," + margin.top + ")");
 
 // get the data
-d3.csv("./vlaues.csv", function(data) {
+d3.csv("values.csv", function(data) {
 
   // X axis: scale and draw:
   var x = d3.scaleLinear()
