--- a/page1.html
+++ b/page1.html
@@ -42,7 +42,7 @@ d3.csv("values.csv", function(data) {
 
   // X axis: scale and draw:
   var x = d3.scaleLinear()
-      .domain([0, 1000])     // can use this instead of 1000 to have the max of data: d3.max(data, function(d) { return +d.value })
+      .domain([0, d3.max(data, function(d) { return +d.value }])     // can use this instead of 1000 to have the max of data: d3.max(data, function(d) { return +d.value })
       .range([0, width]);
   svg.append("g")
       .attr("transform", "translate(0," + height + ")")
