--- a/page1.html
+++ b/page1.html
@@ -38,11 +38,11 @@ var svg = d3.select("#my_dataviz")
           "translate(" + margin.left + "," + margin.top + ")");
 
 // get the data
-d3.csv("values.csv", function(data) {
+d3.csv("https://github.com/bengoodmanhl/bengoodmanhl.github.io/blob/main/values.csv", function(data) {
 
   // X axis: scale and draw:
   var x = d3.scaleLinear()
-      .domain([0, d3.max(data, function(d) { return +d.value }])     // can use this instead of 1000 to have the max of data: d3.max(data, function(d) { return +d.value })
+      .domain([0, d3.max(data, 1000}])     // can use this instead of 1000 to have the max of data: d3.max(data, function(d) { return +d.value })
       .range([0, width]);
   svg.append("g")
       .attr("transform", "translate(0," + height + ")")
@@ -50,7 +50,7 @@ d3.csv("values.csv", function(data) {
 
   // set the parameters for the histogram
   var histogram = d3.histogram()
-      .value(function(d) { return d.value; })   // I need to give the vector of value
+      .value(function(d) { return d.price; })   // I need to give the vector of value
       .domain(x.domain())  // then the domain of the graphic
       .thresholds(x.ticks(70)); // then the numbers of bins
 
