--- a/page1.html
+++ b/page1.html
@@ -2,6 +2,11 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/ >
+		 <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <a href = "index.html">Home</a>
+  <a href = "page1.html">Page1</a>
 		
 <body>
     <h1>Page 1</h1>
@@ -10,10 +15,7 @@
     
     <title>Smoothed D3.js Radar Chart</title>
 
-		<!-- Google fonts -->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-
+		
 		<!-- D3.js -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 		
@@ -28,9 +30,7 @@
 				cursor: default;
 			}
 			
-			.legend {
-				font-family: 'Raleway', sans-serif;
-				fill: #333333;
+			
 			}
 			
 			.tooltip {
