--- a/page1.html
+++ b/page1.html
@@ -61,7 +61,7 @@
 			////////////////////////////////////////////////////////////// 
 
 			<script>
-    fetch("https://example.com/data.json") // Replace this with your actual JSON URL
+    fetch("https://raw.githubusercontent.com/bengoodmanhl/bengoodmanhl.github.io/refs/heads/main/RadarJSON.json") // Replace this with your actual JSON URL
       .then(response => {
         if (!response.ok) {
           throw new Error("Network response was not ok " + response.statusText);
