--- a/page1.html
+++ b/page1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/ >
@@ -12,11 +12,16 @@
     <h1>Page 1</h1>
     <p>Other</p>
 </body> 
-    
+
+<script>
+
+	
+</script>
+		
  
 </html>
   
 
 
 
-</html>
+
