--- a/page1.html
+++ b/page1.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
   <title>Radar chart</title>
     <script src="https://d3js.org/d3.v3.min.js"></script>
-	<script src="RadarChart.js"></script>
+	<script src="radarChart.js"></script>
 	<style>
 		body {
 		  overflow: hidden;
