--- a/page1.html
+++ b/page1.html
@@ -51,34 +51,138 @@
 			////////////////////////////////////////////////////////////// 
 
 			var data = [
-					  [//iPhone
-						{axis:"Battery Life",value:0.22},
-						{axis:"Brand",value:0.28},
-						{axis:"Contract Cost",value:0.29},
-						{axis:"Design And Quality",value:0.17},
-						{axis:"Have Internet Connectivity",value:0.22},
-						{axis:"Large Screen",value:0.02},
-						{axis:"Price Of Device",value:0.21},
-						{axis:"To Be A Smartphone",value:0.50}			
-					  ],[//Samsung
-						{axis:"Battery Life",value:0.27},
-						{axis:"Brand",value:0.16},
-						{axis:"Contract Cost",value:0.35},
-						{axis:"Design And Quality",value:0.13},
-						{axis:"Have Internet Connectivity",value:0.20},
-						{axis:"Large Screen",value:0.13},
-						{axis:"Price Of Device",value:0.35},
-						{axis:"To Be A Smartphone",value:0.38}
-					  ],[//Nokia Smartphone
-						{axis:"Battery Life",value:0.26},
-						{axis:"Brand",value:0.10},
-						{axis:"Contract Cost",value:0.30},
-						{axis:"Design And Quality",value:0.14},
-						{axis:"Have Internet Connectivity",value:0.22},
-						{axis:"Large Screen",value:0.04},
-						{axis:"Price Of Device",value:0.41},
-						{axis:"To Be A Smartphone",value:0.30}
-					  ]
+					{
+  
+  "LLOYDS BANKING GROUP PLC": [
+    { "axis": "Complaints per 1000", "value": "66%" },
+    { "axis": "Closed", "value": "345%" },
+    { "axis": "Upheld%", "value": "327%" },
+    { "axis": "Closed 8 weeks+%", "value": "265%" },
+    { "axis": "FOS new cases#", "value": "66%" },
+    { "axis": "FOS Upheld%", "value": "81%" },
+    { "axis": "FOS cases per 1m", "value": "113%" }
+  ],
+  "HSBC HOLDINGS PLC": [
+    { "axis": "Complaints per 1000", "value": "111%" },
+    { "axis": "Closed", "value": "146%" },
+    { "axis": "Upheld%", "value": "132%" },
+    { "axis": "Closed 8 weeks+%", "value": "187%" },
+    { "axis": "FOS new cases#", "value": "111%" },
+    { "axis": "FOS Upheld%", "value": "142%" },
+    { "axis": "FOS cases per 1m", "value": "82%" }
+  ],
+  "BARCLAYS PLC": [
+    { "axis": "Complaints per 1000", "value": "71%" },
+    { "axis": "Closed", "value": "194%" },
+    { "axis": "Upheld%", "value": "207%" },
+    { "axis": "Closed 8 weeks+%", "value": "159%" },
+    { "axis": "FOS new cases#", "value": "71%" },
+    { "axis": "FOS Upheld%", "value": "77%" },
+    { "axis": "FOS cases per 1m", "value": "86%" }
+  ],
+  "BANCO SANTANDER SA": [
+    { "axis": "Complaints per 1000", "value": "84%" },
+    { "axis": "Closed", "value": "115%" },
+    { "axis": "Upheld%", "value": "121%" },
+    { "axis": "Closed 8 weeks+%", "value": "112%" },
+    { "axis": "FOS new cases#", "value": "84%" },
+    { "axis": "FOS Upheld%", "value": "93%" },
+    { "axis": "FOS cases per 1m", "value": "157%" }
+  ],
+  "NATIONWIDE BUILDING SOCIETY": [
+    { "axis": "Complaints per 1000", "value": "80%" },
+    { "axis": "Closed", "value": "184%" },
+    { "axis": "Upheld%", "value": "138%" },
+    { "axis": "Closed 8 weeks+%", "value": "170%" },
+    { "axis": "FOS new cases#", "value": "80%" },
+    { "axis": "FOS Upheld%", "value": "123%" },
+    { "axis": "FOS cases per 1m", "value": "45%" }
+  ],
+  "MONZO BANK LIMITED": [
+    { "axis": "Complaints per 1000", "value": "129%" },
+    { "axis": "Closed", "value": "70%" },
+    { "axis": "Upheld%", "value": "86%" },
+    { "axis": "Closed 8 weeks+%", "value": "105%" },
+    { "axis": "FOS new cases#", "value": "129%" },
+    { "axis": "FOS Upheld%", "value": "122%" },
+    { "axis": "FOS cases per 1m", "value": "168%" }
+  ],
+  "TSB BANKING GROUP": [
+    { "axis": "Complaints per 1000", "value": "112%" },
+    { "axis": "Closed", "value": "42%" },
+    { "axis": "Upheld%", "value": "43%" },
+    { "axis": "Closed 8 weeks+%", "value": "54%" },
+    { "axis": "FOS new cases#", "value": "112%" },
+    { "axis": "FOS Upheld%", "value": "126%" },
+    { "axis": "FOS cases per 1m", "value": "63%" }
+  ],
+  "CAPITAL ONE FINANCIAL CORP": [
+    { "axis": "Complaints per 1000", "value": "157%" },
+    { "axis": "Closed", "value": "26%" },
+    { "axis": "Upheld%", "value": "47%" },
+    { "axis": "Closed 8 weeks+%", "value": "47%" },
+    { "axis": "FOS new cases#", "value": "157%" },
+    { "axis": "FOS Upheld%", "value": "100%" },
+    { "axis": "FOS cases per 1m", "value": "174%" }
+  ],
+  "STARLING BANK LIMITED": [
+    { "axis": "Complaints per 1000", "value": "173%" },
+    { "axis": "Closed", "value": "21%" },
+    { "axis": "Upheld%", "value": "36%" },
+    { "axis": "Closed 8 weeks+%", "value": "41%" },
+    { "axis": "FOS new cases#", "value": "173%" },
+    { "axis": "FOS Upheld%", "value": "114%" },
+    { "axis": "FOS cases per 1m", "value": "124%" }
+  ],
+  "THE ROYAL BANK OF SCOTLAND GROUP": [
+    { "axis": "Complaints per 1000", "value": "94%" },
+    { "axis": "Closed", "value": "170%" },
+    { "axis": "Upheld%", "value": "164%" },
+    { "axis": "Closed 8 weeks+%", "value": "185%" },
+    { "axis": "FOS new cases#", "value": "94%" },
+    { "axis": "FOS Upheld%", "value": "113%" },
+    { "axis": "FOS cases per 1m", "value": "67%" }
+  ],
+  "JPMORGAN CHASE & CO": [
+    { "axis": "Complaints per 1000", "value": "57%" },
+    { "axis": "Closed", "value": "36%" },
+    { "axis": "Upheld%", "value": "22%" },
+    { "axis": "Closed 8 weeks+%", "value": "23%" },
+    { "axis": "FOS new cases#", "value": "57%" },
+    { "axis": "FOS Upheld%", "value": "109%" },
+    { "axis": "FOS cases per 1m", "value": "45%" }
+  ],
+  "CO-OPERATIVE GROUP LIMITED": [
+    { "axis": "Complaints per 1000", "value": "102%" },
+    { "axis": "Closed", "value": "17%" },
+    { "axis": "Upheld%", "value": "22%" },
+    { "axis": "Closed 8 weeks+%", "value": "20%" },
+    { "axis": "FOS new cases#", "value": "102%" },
+    { "axis": "FOS Upheld%", "value": "93%" },
+    { "axis": "FOS cases per 1m", "value": "87%" }
+  ],
+  "J SAINSBURY PLC": [
+    { "axis": "Complaints per 1000", "value": "57%" },
+    { "axis": "Closed", "value": "22%" },
+    { "axis": "Upheld%", "value": "34%" },
+    { "axis": "Closed 8 weeks+%", "value": "15%" },
+    { "axis": "FOS new cases#", "value": "57%" },
+    { "axis": "FOS Upheld%", "value": "43%" },
+    { "axis": "FOS cases per 1m", "value": "44%" }
+  ],
+  "METRO BANK PLC": [
+    { "axis": "Complaints per 1000", "value": "108%" },
+    { "axis": "Closed", "value": "12%" },
+    { "axis": "Upheld%", "value": "23%" },
+    { "axis": "Closed 8 weeks+%", "value": "16%" },
+    { "axis": "FOS new cases#", "value": "108%" },
+    { "axis": "FOS Upheld%", "value": "67%" },
+    { "axis": "FOS cases per 1m", "value": "145%" }
+  ]
+
+
+				
+				
 					];
 			////////////////////////////////////////////////////////////// 
 			//////////////////// Draw the Chart ////////////////////////// 
