--- a/page1.html
+++ b/page1.html
@@ -186,6 +186,10 @@
 				
 				
 					];
+			
+var data1 = data(0,1,2,3)
+			
+			
 			////////////////////////////////////////////////////////////// 
 			//////////////////// Draw the Chart ////////////////////////// 
 			////////////////////////////////////////////////////////////// 
