--- a/page1.html
+++ b/page1.html
@@ -54,6 +54,7 @@
 				
 
   [
+	  {"name": "Bank1"},  
     { "axis": "Complaints per 1000", "value": 0.66 },
     { "axis": "Closed", "value": 3.45 },
     { "axis": "Upheld%", "value": 3.27 },
@@ -63,6 +64,7 @@
     { "axis": "FOS cases per 1m", "value": 1.13 }
   ],
   [
+	  	  {"name": "Bank2"},
     { "axis": "Complaints per 1000", "value": 1.11 },
     { "axis": "Closed", "value": 1.46 },
     { "axis": "Upheld%", "value": 1.32 },
@@ -72,7 +74,8 @@
     { "axis": "FOS cases per 1m", "value": 0.82 }
   ],
   [
-    { "axis": "Complaints per 1000", "value": 0.71 },
+	  {"name": "Bank3"},
+	  { "axis": "Complaints per 1000", "value": 0.71 },
     { "axis": "Closed", "value": 1.94 },
     { "axis": "Upheld%", "value": 2.07 },
     { "axis": "Closed 8 weeks+%", "value": 1.59 },
