--- a/page1.html
+++ b/page1.html
@@ -54,7 +54,7 @@
 				
 
   [
-	  {"name": "Bank1"},  
+	  {"name": "Bank1","value":0},  
     { "axis": "Complaints per 1000", "value": 0.66 },
     { "axis": "Closed", "value": 3.45 },
     { "axis": "Upheld%", "value": 3.27 },
@@ -64,7 +64,7 @@
     { "axis": "FOS cases per 1m", "value": 1.13 }
   ],
   [
-	  	  {"name": "Bank2"},
+	  	  {"name": "Bank2","value":0},
     { "axis": "Complaints per 1000", "value": 1.11 },
     { "axis": "Closed", "value": 1.46 },
     { "axis": "Upheld%", "value": 1.32 },
@@ -74,7 +74,7 @@
     { "axis": "FOS cases per 1m", "value": 0.82 }
   ],
   [
-	  {"name": "Bank3"},
+	  {"name": "Bank3","value":0},
 	  { "axis": "Complaints per 1000", "value": 0.71 },
     { "axis": "Closed", "value": 1.94 },
     { "axis": "Upheld%", "value": 2.07 },
@@ -84,7 +84,8 @@
     { "axis": "FOS cases per 1m", "value": 0.86 }
   ],
   [
-    { "axis": "Complaints per 1000", "value": 0.84 },
+	{"name": "Bank3","value":0},
+	  { "axis": "Complaints per 1000", "value": 0.84 },
     { "axis": "Closed", "value": 1.15 },
     { "axis": "Upheld%", "value": 1.21 },
     { "axis": "Closed 8 weeks+%", "value": 1.12 },
