--- a/page1.html
+++ b/page1.html
@@ -123,7 +123,7 @@ console.log(filteredBanks);
 			  color: color
 			};
 			//Call function to draw the Radar chart
-			RadarChart(".radarChart", data, radarChartOptions);
+			RadarChart(".radarChart", filteredBanks, radarChartOptions);
 		</script>
 	</body>
 </html>
