--- a/page1.html
+++ b/page1.html
@@ -163,7 +163,7 @@ const filtered = data.filter(bankArray => {
 			  color: color
 			};
 			//Call function to draw the Radar chart
-			RadarChart(".radarChart", filteredBanks, radarChartOptions);
+			RadarChart(".radarChart", filtered, radarChartOptions);
 		</script>
 	</body>
 </html>
