--- a/page1.html
+++ b/page1.html
@@ -137,10 +137,10 @@ let bankList = [];
     updateBankList();
 
 			
-const bankNames = bankList.map(b => b.name);
+var bankNames = bankList.map(b => b.name);
 
-const filtered = data.filter(bankArray => {
-  const nameObj = bankArray.find(item => item.name);
+var filtered = data.filter(bankArray => {
+  var nameObj = bankArray.find(item => item.name);
   return nameObj && bankNames.includes(nameObj.name);
 });
 
