--- a/page1.html
+++ b/page1.html
@@ -129,7 +129,7 @@
 
       d3.select(".radarChart").selectAll("*").remove(); // clear chart before redrawing
 
-      radarChart(".radarChart", filtered, radarChartOptions);
+      RadarChart(".radarChart", filtered, radarChartOptions);
     }
 
     // Initial chart draw
